[package]
name = "surrealdb_id"
version = "0.1.0"
edition = "2021"

[dependencies]
surrealdb = { version = "1.3.0", default-features = false, features = ["kv-mem"] }
serde = "1.0.196"
serde_json = "1.0.113"
serde_derive = "1.0.196"
log = "0.4.21"

[dev-dependencies]
chrono = "0.4.35"
tokio = "1.36.0"
