[package]
name = "surrealdb_id"
version = "0.1.0"
edition = "2021"
description = "Id and Relation for SurrealDB"
readme = "README.md"
repository = "https://github.com/dev-logs/surrealdb-id"
license = "MIT"
keywords = ["surreal", "surrealdb", "db", "surrealql", "id"]

[dependencies]
surrealdb = { version = "1.3.0", default-features = false, features = ["kv-mem"] }
serde = "1.0.196"
serde_json = "1.0.113"
serde_derive = "1.0.196"

[dev-dependencies]
chrono = "0.4.35"
tokio = "1.36.0"
