[package]
name = "surrealdb_id"
version = "1.0.0"
edition = "2021"
description = "Id and Relation for SurrealDB"
readme = "README.md"
repository = "https://github.com/dev-logs/surrealdb-id"
license = "MIT"
keywords = ["surreal", "surrealdb", "db", "surrealql", "id"]

[dependencies]
serde = "1.0.196"
serde_json = "1.0.113"
serde_derive = "1.0.196"
surrealdb = "2.1.4"

[dev-dependencies]
chrono = "0.4.35"
tokio = "1.36.0"
surrealdb = { version = "^2.1.4", features = ["kv-mem"] }
